Fix color bubble overflow in Chat Settings, Conversation Color (Merge signalapp/Signal-Desktop#6370)

--- a/stylesheets/components/ConversationDetails.scss
+++ b/stylesheets/components/ConversationDetails.scss
@@ -79,7 +79,7 @@
   }
 
   &__chat-color {
-    @include color-bubble(20px);
+    @include color-bubble(32px);
   }
 
   &-membership-list,
