--- a/stylesheets/components/ChatColorPicker.scss
+++ b/stylesheets/components/ChatColorPicker.scss
@@ -2,7 +2,7 @@
 // SPDX-License-Identifier: AGPL-3.0-only
 
 .ChatColorPicker {
-  $bubble-size: 40px;
+  $bubble-size: 52px;
 
   &__container {
     max-width: 748px;
